fixed navbar img on safari
navbar img logo was different in app.html in safari, because there were conflicting instructions

--- a/css/app.css
+++ b/css/app.css
@@ -199,7 +199,7 @@ figure {
 }
 
 
-img {
+figure img, .icon-where img {
    object-fit: cover;
    width: 100%;
    height: 100%;
